fixed some minor spacing issues - paragraphs where to close to headlines

--- a/public/css/basics.css
+++ b/public/css/basics.css
@@ -153,6 +153,18 @@ h6 {
 	font-size: 1.4rem;
 }
 
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin-bottom: 10px;
+}
+
+:where(h2, h3, h4, h5, h6) + p {
+	margin-top: 0;
+}
+
 /* BLOCKQUOTE --------------------------------------------------------------- */
 blockquote {
 	margin: 0;
